# finance_plugins

./: .debug.pid  .gitignore  .gitmodules  CLAUDE.md  DEBUG_PLAN.md  DEVELOPMENT_PLAN.md  QuickBooks_Payments_API_Documentation.md  README.md  ROADMAP.md  TEST_REPORT.md  debug_mercury_token.py  finance_plugins.code-workspace  mercury_tools_plugin.difypkg  mercury_trigger_plugin.difypkg  progress.md  pyproject.toml  quickbooks_payments_plugin.difypkg  quickbooks_plugin.difypkg  test_mercury_tools.py  test_mercury_tools_local.py
mercury_tools_plugin/: .env.example  .gitignore  PRIVACY.md  README.md  manifest.yaml  pyproject.toml  requirements.txt
mercury_tools_plugin/docs/: Mercury_MCP_API_Reference.md
mercury_tools_plugin/provider/: mercury_tools.py  mercury_tools.yaml
mercury_tools_plugin/tests/: README.md
mercury_tools_plugin/tools/: create_recipient.py  create_recipient.yaml  customer_management.py  customer_management.yaml  download_statement.py  download_statement.yaml  edit_recipient.py  edit_recipient.yaml  get_account.py  get_account.yaml  get_accounts.py  get_accounts.yaml  get_cards.py  get_cards.yaml  get_events.py  get_events.yaml  get_invoice_pdf.py  get_invoice_pdf.yaml  get_recipient.py  get_recipient.yaml  get_recipients.py  get_recipients.yaml  get_statements.py  get_statements.yaml  get_transaction.py  get_transaction.yaml  get_transactions.py  get_transactions.yaml  internal_transfer.py  internal_transfer.yaml  invoice_management.py  invoice_management.yaml  send_money.py  send_money.yaml  update_transaction.py  update_transaction.yaml  upload_recipient_attachment.py  upload_recipient_attachment.yaml  upload_transaction_attachment.py  upload_transaction_attachment.yaml
quickbooks_payments_plugin/: PRIVACY.md  README.md  manifest.yaml  pyproject.toml  requirements.txt
quickbooks_payments_plugin/provider/: quickbooks_payments.py  quickbooks_payments.yaml
quickbooks_payments_plugin/tools/: create_bank_account.py  create_bank_account.yaml  create_charge.py  create_charge.yaml  create_refund.py  create_refund.yaml  create_token.py  create_token.yaml  delete_bank_account.py  delete_bank_account.yaml  get_bank_accounts.py  get_bank_accounts.yaml  get_charge.py  get_charge.yaml
quickbooks_plugin/: .env.example  .gitignore  PRIVACY.md  README.md  fix_yaml.py  main.py  manifest.yaml  pyproject.toml  requirements.txt
quickbooks_plugin/docs/: DEVELOPMENT_NOTES.md
quickbooks_plugin/provider/: quickbooks.py  quickbooks.yaml
quickbooks_plugin/tests/: __init__.py
quickbooks_plugin/tools/: attachable_management.py  attachable_management.yaml  bill_payment_management.py  bill_payment_management.yaml  class_management.py  class_management.yaml  create_bill.py  create_bill.yaml  create_deposit.py  create_deposit.yaml  create_invoice.py  create_invoice.yaml  create_journal_entry.py  create_journal_entry.yaml  create_purchase.py  create_purchase.yaml  create_transfer.py  create_transfer.yaml  credit_memo_management.py  credit_memo_management.yaml  (+32 more)
(+256 files in other folders)
