[project]
name = "quickbooks"
version = "0.2.3"
description = "QuickBooks Online integration for automated accounting synchronization."
authors = [
    { name = "petrus" }
]
requires-python = ">=3.12"
dependencies = [
    "dify-plugin>=0.6.0",
    "httpx>=0.27.0",
    "werkzeug>=3.0.0",
]

[dependency-groups]
dev = [
    "pyrefly>=0.0.1",
    "pytest>=9.0.2",
    "ruff>=0.8.4",
]

[tool.pyrefly.errors]
untyped-import = "ignore"
implicit-any = "ignore"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "PL", "PT"]
ignore = ["ANN101", "ANN102"]

[tool.pyrefly]
python-version = "3.12.0"
infer-with-first-use = false
